# QuartzEngine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  appveyor.yml
Doc/: ThirdParties.md
Pheonix/Core/: CMakeLists.txt
Pheonix/Core/Include/: CMakeLists.txt
Pheonix/Core/Include/Core/: CMakeLists copy.txt  CMakeLists.txt
Pheonix/Core/Source/: CMakeLists.txt
Pheonix/Core/Source/Voxels/: Blocks.cpp  CMakeLists.txt
Phoenix/Core/: CMakeLists.txt
Phoenix/Core/Include/: CMakeLists.txt
Phoenix/Core/Include/Core/: CMakeLists.txt  LuaAPI.hpp
Phoenix/Core/Source/: CMakeLists.txt  LuaAPI.cpp
Phoenix/Core/Source/Voxels/: Blocks.cpp  CMakeLists.txt
Phoenix/Server/: CMakeLists.txt
Phoenix/Server/Include/: CMakeLists.txt
Phoenix/Server/Source/: CMakeLists.txt  main.cpp
Quartz/Engine/: CMakeLists.txt
Quartz/Engine/Include/: CMakeLists.txt  Quartz.hpp
Quartz/Engine/Include/Quartz/: CMakeLists.txt  Core.hpp  Engine.hpp  NonCopyable.hpp  QuartzPCH.hpp  UniversalDoxygenComments.hpp
Quartz/Engine/Source/: CMakeLists.txt  Engine.cpp  QuartzPCH.cpp
Quartz/Engine/Source/Core/: CMakeLists.txt  Engine.cpp  QuartzPCH.cpp
Quartz/Engine/Source/Graphics/: CMakeLists.txt  Camera.cpp  ForwardMeshRenderer.cpp  IWindow.cpp  ImGuiExtensions.cpp  Mesh.cpp
Quartz/Engine/Source/Math/: CMakeLists.txt  Matrix4x4.cpp  Ray.cpp  Vector2.cpp  Vector3.cpp
Quartz/Engine/Source/Platform/: GLWindow.cpp  SDLGuiLayer.cpp
Quartz/Engine/Source/Utilities/: AssetManagement.cpp  CMakeLists.txt  Commander.cpp  Config.cpp  ContentLoader.cpp  FileIO.cpp  Logger.cpp  Plugin.cpp
Quartz/Engine/Source/Voxels/: Block.cpp  Blocks.cpp  CMakeLists.txt  Chunk.cpp  ChunkManager.cpp  ChunkRenderer.cpp  Terrain.cpp
Quartz/Engine/Source/voxels/: Block.cpp  Chunk.cpp
QuartzSandbox/: CMakeLists.txt
QuartzSandbox/Include/Sandbox/: CMakeLists.txt  DebugOverlay.hpp  Sandbox.hpp
QuartzSandbox/Source/: CMakeLists.txt  Client.cpp  DebugOverlay.cpp  Sandbox.cpp
QuartzSandbox/assets/: CMakeLists.txt
QuartzSandbox/assets/example_configs/: Controls.ini
QuartzSandbox/assets/scripts/: PerlinNoise.lua  index.lua
QuartzSandbox/assets/shaders/: Example.frag  Example.vert  basic.shader  main.frag  main.shader  main.vert  ui.frag
QuartzSandbox/assets/shaders/tests/: test.frag  test.shader  test.vert
Sandbox/: CMakeLists.txt
Sandbox/Source/: CMakeLists.txt  Sandbox.cpp
Sandbox/source/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  README.md
client/include/client/: CMakeLists.txt  Client.hpp  Player.hpp  chunk.hpp  client.hpp  textures.hpp
client/source/src/: main.cpp
client/src/: CMakeLists.txt  Client.cpp  Player.cpp  chunk.cpp  main.cpp  textures.cpp
engine/: CMakeLists.txt  README.md
engine/docs/: Doxyfile
engine/include/: CMakeLists.txt  Phoenix.hpp
engine/include/engine/: camera.hpp  common.hpp  engine.hpp  imgui.hpp  os.hpp  types.hpp
engine/include/engine/GLFW/: GLFWWindow.hpp
engine/include/engine/SDL/: SDLKeyboardDefinitions.hpp  SDLWindow.hpp  context.hpp  window.hpp
engine/include/engine/core/: Application.hpp  CMakeLists.txt  Core.hpp  EntryPoint.hpp  UniversalDoxygenComments.hpp  os.hpp
engine/include/engine/entities/: Item.hpp  ItemInstance.hpp  item.hpp  iteminstance.hpp
engine/include/engine/events/: IKeyboardDefinitions.hpp  Keys.hpp
engine/include/engine/graphics/: Camera.hpp  Context.hpp  IWindow.hpp  eventReturnTypes.hpp  window.hpp
engine/include/engine/math/: Matrix4x4.hpp  Vector2.hpp  Vector3.hpp  mathutils.hpp  matrix4x4.hpp  vector2.hpp  vector3.hpp
engine/include/engine/utils/: Config.hpp  constants.hpp  io.hpp  logging.hpp
engine/include/engine/voxels/: Block.hpp  CMakeLists.txt  Chunk.hpp  ChunkManager.hpp  Map.hpp  MapBlock.hpp  block.hpp  chunk.hpp  map.hpp  mapblock.hpp
engine/include/util/: logging.hpp
engine/source/include/: Quartz.hpp  engine.hpp
engine/source/include/quartz/: CMakeLists.txt
engine/source/include/scripting/: wrenBinder.hpp
engine/source/src/: CMakeLists.txt  engine.cpp
engine/source/src/core/: CMakeLists.txt
engine/source/src/scripting/: wrenBinder.cpp
engine/source/src/voxels/: Block.cpp  Chunk.cpp  ChunkManager.cpp
engine/src/: CMakeLists.txt  camera.cpp  engine.cpp  imgui.cpp
engine/src/GLFW/: GLFWWindow.cpp
engine/src/SDL/: SDLWindow.cpp  window.cpp
engine/src/core/: CMakeLists.txt
engine/src/core/graphics/: BatchRenderer.cpp  CMakeLists.txt  Camera.cpp  IWindow.cpp  Renderer2D.cpp
engine/src/core/math/: CMakeLists.txt  Matrix4x4.cpp  Ray.cpp  Vector2.cpp  Vector3.cpp
engine/src/core/platform/: CMakeLists.txt
engine/src/core/utils/: CMakeLists.txt  Config.cpp  IO.cpp  Logging.cpp
engine/src/entities/: Item.cpp  ItemInstance.cpp  item.cpp  iteminstance.cpp
engine/src/graphics/: Camera.cpp  IWindow.cpp  window.cpp
engine/src/graphics/opengl/: ShaderPipeline.cpp  TextureArray.cpp  VertexArray.cpp  VertexBuffer.cpp  buffer.cpp  shader.cpp  texture.cpp  vertexarray.cpp
engine/src/math/: Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  matrix4x4.cpp  vector2.cpp  vector3.cpp
engine/src/util/: logging.cpp
engine/src/utils/: Config.cpp  io.cpp  logging.cpp
engine/src/voxels/: Block.cpp  CMakeLists.txt  Chunk.cpp  ChunkManager.cpp  Map.cpp  MapBlock.cpp  block.cpp  chunk.cpp  map.cpp  mapblock.cpp
engine/src/voxels/entities/: Item.cpp
launcher/: CMakeLists.txt  README.md
launcher/source/include/: launcher.hpp
launcher/source/src/: main.cpp
launcher/src/: main.cpp
quartz/client/: CMakeLists.txt
quartz/client/include/: CMakeLists.txt
quartz/client/src/: CMakeLists.txt  Client.cpp  Player.cpp
quartz/engine/: CMakeLists.txt
quartz/engine/include/: CMakeLists.txt  Quartz.hpp
quartz/engine/src/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/assets/scripts/: PerlinNoise.lua
sandbox/assets/shaders/: main.frag
sandbox/source/src/: CMakeLists.txt  Client.cpp
server/: CMakeLists.txt  README.md
server/include/server/: server.hpp
server/source/src/: main.cpp
server/src/: main.cpp
(+505 files in other folders)
